external-crates/move/crates/move-compiler/tests/move_check/expansion/clever_errors_attribute.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/expansion/clever_errors_attribute.move:3:20
  │
3 │     #[error(code = 10)]
  │                    ^^ Clever assertions are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

